--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,11 @@
   <version>0.0.1-SNAPSHOT</version>
 </dependency>
 
-	<dependency>
-	    <groupId>javax</groupId>
-	    <artifactId>javaee-api</artifactId>
-	    <version>8.0</version>
-	    <scope>provided</scope>
-	</dependency>
+<dependency>
+  <groupId>jakarta.platform</groupId>
+  <artifactId>jakarta.jakartaee-api</artifactId>
+  <version>9.0.0</version>
+</dependency>
 
 	<dependency>
 	    <groupId>org.modelmapper</groupId>
@@ -45,13 +44,13 @@
   
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>3.8.0</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <release>11</release>
         </configuration>
-      </plugin>
+      </plugin> 
       <plugin>
         <artifactId>maven-ejb-plugin</artifactId>
         <version>3.0.1</version>
